--- a/package.json
+++ b/package.json
@@ -3,7 +3,20 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve": "nx run-many --target=serve --all --maxParallel=100"
+    "serve": "nx run-many --target=serve --all --maxParallel=100",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "lint": "nx workspace-lint && nx lint",
+    "test": "nx test",
+    "nx": "nx",
+    "start": "nx serve",
+    "build": "nx run-many --target build --all"
   },
   "private": true,
   "dependencies": {
@@ -15,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/typeorm": "^10.0.1",
+    "@nrwl/nx-cloud": "^16.5.2",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
@@ -39,7 +53,7 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "17.1.3",
-    "@nx/eslint": "17.1.3",
+    "@nx/eslint": "^17.1.3",
     "@nx/eslint-plugin": "17.1.3",
     "@nx/jest": "17.1.3",
     "@nx/js": "17.1.3",
@@ -59,16 +73,19 @@
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@types/sequelize": "^4.28.19",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.9.1",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
-    "eslint": "~8.46.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-cypress": "^2.13.4",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
