--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,11 @@ name: Continuousintegration
 on:
   push:
     branches:
-      - main
+      - master
       
   pull_request:
     branches:
-      - main
+      - master
       - dev
       
 
