--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
          #DEFAULT_BRANCH: development
          VALIDATE_JAVASCRIPT_ES: true 
          VALIDATE_TYPESCRIPT_ES: true 
-         VALIDATE_TYPESCRIPT_STANDARD: true
+        # VALIDATE_TYPESCRIPT_STANDARD: true
        # TYPESCRIPT_ES_CONFIG_FILE: .eslintrc.yml
           # To report GitHub Actions status checks
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
