--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,9 @@ on:
     branches:
       - master
       - dev
-      
+permissions:
+  actions: read
+  contents: read    
 
 jobs:
 
@@ -44,7 +46,7 @@ jobs:
       - run: npm ci
       - uses: nrwl/nx-set-shas@v3
       # This line is needed for nx affected to work when CI is running on a PR
-      - run: git branch --track master origin/master
+      - run: git branch --track main origin/main
 
-      - run: npx nx-cloud record -- nx format:check
+      - run: npx nx-cloud record -- nx format:check --base=master
       - run: npx nx affected -t lint,test,build --parallel=3
