--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,5 @@ jobs:
       # This line is needed for nx affected to work when CI is running on a PR
       - run: git branch --track master origin/master
 
-      - run: npx nx-cloud record -- nx format:check --base=master
-      - run: npx nx affected -t lint,test,build --parallel=3
+      - run: nx affected:build --base=master
+      - run: nx affected:test --base=master
