--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
       - run: git branch --track master origin/master
 
       #- run: npx nx-cloud record -- nx format:check
-      - run: npx nx affected -t build
+      - run: npx nx affected -t build --base=master
